Continued Java 11 refactoring with co-pilot agent