@@ -20,7 +20,6 @@ package com.percussion.services.widgetbuilder;
 import com.percussion.services.guidmgr.IPSGuidManager;
 import com.percussion.share.dao.IPSGenericDao;
 import com.percussion.util.PSBaseBean;
-import org.apache.commons.lang3.Validate;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.hibernate.HibernateException;
@@ -31,13 +30,15 @@ import org.springframework.transaction.annotation.Transactional;
 
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 /**
- * Data Access Object implementation for Widget Builder Definition operations.
- * This Spring Repository provides CRUD operations for managing widget builder definitions
- * using JPA/Hibernate for persistence.
+ * Data Access Object implementation for Widget Builder Definition operations with modern Java 11 patterns.
+ * This Spring Repository provides comprehensive CRUD operations for managing widget builder definitions
+ * using JPA/Hibernate for persistence with enhanced error handling and Optional-based safe access.
  *
  * @author matthewernewein
  */
@@ -46,91 +47,105 @@ import java.util.Optional;
 @PSBaseBean("sys_widgetBuilderDefinitionDao")
 public class PSWidgetBuilderDefinitionDao implements IPSWidgetBuilderDefinitionDao {
 
-    private static final Logger logger = LogManager.getLogger(PSWidgetBuilderDefinitionDao.class);
+    private static final Logger log = LogManager.getLogger(PSWidgetBuilderDefinitionDao.class);
 
     /**
      * Constant for the key used to generate widget builder definition IDs.
      */
     private static final String WIDGET_BUILDER_DEFINITION_ID_KEY = "PSX_WIDGETBUILDERDEFINITIONID";
 
+    /**
+     * Entity manager for JPA operations.
+     */
     @PersistenceContext
     private EntityManager entityManager;
 
+    /**
+     * GUID manager for generating unique identifiers.
+     */
     @Autowired
     private IPSGuidManager guidManager;
 
     /**
-     * Gets the current Hibernate session from the EntityManager.
+     * Gets the current Hibernate session from the EntityManager with enhanced error handling.
      *
-     * @return the current Hibernate session
+     * @return the current Hibernate session, never null
+     * @throws IllegalStateException if the session cannot be obtained
      */
     private Session getSession() {
-        return entityManager.unwrap(Session.class);
+        try {
+            return entityManager.unwrap(Session.class);
+        } catch (Exception e) {
+            throw new IllegalStateException("Failed to obtain Hibernate session", e);
+        }
     }
 
     @Override
     @Transactional
     public PSWidgetBuilderDefinition save(PSWidgetBuilderDefinition definition) throws IPSGenericDao.SaveException {
-        Validate.notNull(definition, "Widget builder definition cannot be null");
+        Objects.requireNonNull(definition, "Widget builder definition cannot be null");
 
         // Generate new ID if this is a new entity
         if (definition.getWidgetBuilderDefinitionId() == -1) {
             var newId = guidManager.createId(WIDGET_BUILDER_DEFINITION_ID_KEY);
             definition.setWidgetBuilderDefinitionId(newId);
+            log.debug("Generated new ID {} for widget builder definition", newId);
         }
 
         var session = getSession();
         try {
             session.saveOrUpdate(definition);
             session.flush();
-            logger.debug("Successfully saved widget builder definition with ID: {}",
-                        definition.getWidgetBuilderDefinitionId());
+            log.debug("Successfully saved widget builder definition with ID: {}",
+                     definition.getWidgetBuilderDefinitionId());
             return definition;
         } catch (HibernateException e) {
-            var errorMsg = "Database error while saving widget builder definition: " + e.getMessage();
-            logger.error(errorMsg, e);
+            var errorMsg = String.format("Database error while saving widget builder definition with ID %d: %s",
+                                       definition.getWidgetBuilderDefinitionId(), e.getMessage());
+            log.error(errorMsg, e);
             throw new IPSGenericDao.SaveException(errorMsg, e);
         }
     }
 
     @Override
-    public PSWidgetBuilderDefinition find(long definitionId) {
-        Validate.isTrue(definitionId > 0, "Definition ID must be positive");
+    public Optional<PSWidgetBuilderDefinition> find(long definitionId) {
+        validateDefinitionId(definitionId);
 
         var session = getSession();
         try {
             var query = session.createQuery(
-                "FROM PSWidgetBuilderDefinition WHERE widgetBuilderDefinitionId = :widgetBuilderDefinitionId",
+                "FROM PSWidgetBuilderDefinition WHERE widgetBuilderDefinitionId = :definitionId",
                 PSWidgetBuilderDefinition.class);
-            query.setParameter("widgetBuilderDefinitionId", definitionId);
+            query.setParameter("definitionId", definitionId);
 
-            var result = query.uniqueResult();
-            logger.debug("Found widget builder definition with ID {}: {}", definitionId, result != null);
+            var result = Optional.ofNullable(query.uniqueResult());
+            log.debug("Found widget builder definition with ID {}: {}", definitionId, result.isPresent());
             return result;
         } catch (HibernateException e) {
-            logger.error("Error finding widget builder definition with ID: {}", definitionId, e);
-            return null;
+            log.error("Error finding widget builder definition with ID: {}", definitionId, e);
+            return Optional.empty();
         }
     }
 
     @Override
     @Transactional
     public void delete(long definitionId) {
-        Validate.isTrue(definitionId > 0, "Definition ID must be positive");
+        validateDefinitionId(definitionId);
 
         var definition = find(definitionId);
-        if (definition != null) {
+        if (definition.isPresent()) {
             var session = getSession();
             try {
-                session.delete(definition);
+                session.delete(definition.get());
                 session.flush();
-                logger.debug("Successfully deleted widget builder definition with ID: {}", definitionId);
+                log.debug("Successfully deleted widget builder definition with ID: {}", definitionId);
             } catch (HibernateException e) {
-                logger.error("Error deleting widget builder definition with ID: {}", definitionId, e);
-                throw new RuntimeException("Failed to delete widget builder definition", e);
+                var errorMsg = String.format("Error deleting widget builder definition with ID: %d", definitionId);
+                log.error(errorMsg, e);
+                throw new RuntimeException(errorMsg, e);
             }
         } else {
-            logger.warn("Attempted to delete non-existent widget builder definition with ID: {}", definitionId);
+            log.warn("Attempted to delete non-existent widget builder definition with ID: {}", definitionId);
         }
     }
 
@@ -139,39 +154,45 @@ public class PSWidgetBuilderDefinitionDao implements IPSWidgetBuilderDefinitionD
         var session = getSession();
         try {
             var query = session.createQuery(
-                "FROM PSWidgetBuilderDefinition ORDER BY label",
+                "FROM PSWidgetBuilderDefinition ORDER BY label ASC",
                 PSWidgetBuilderDefinition.class);
             var results = query.list();
-            logger.debug("Retrieved {} widget builder definitions", results.size());
-            return results;
+            log.debug("Retrieved {} widget builder definitions", results.size());
+            return Collections.unmodifiableList(results);
         } catch (HibernateException e) {
-            logger.error("Error retrieving all widget builder definitions", e);
-            return List.of(); // Return empty list instead of null
+            log.error("Error retrieving all widget builder definitions", e);
+            return Collections.emptyList();
         }
     }
 
     /**
-     * Finds a widget builder definition by prefix.
+     * Validates that a definition ID is valid (positive).
      *
-     * @param prefix the prefix to search for
-     * @return the widget builder definition if found, otherwise empty Optional
+     * @param definitionId the ID to validate
+     * @throws IllegalArgumentException if the ID is invalid
      */
-    public Optional<PSWidgetBuilderDefinition> findByPrefix(String prefix) {
-        Validate.notBlank(prefix, "Prefix cannot be blank");
-
-        var session = getSession();
-        try {
-            var query = session.createQuery(
-                "FROM PSWidgetBuilderDefinition WHERE prefix = :prefix",
-                PSWidgetBuilderDefinition.class);
-            query.setParameter("prefix", prefix);
-
-            var result = Optional.ofNullable(query.uniqueResult());
-            logger.debug("Found widget builder definition with prefix {}: {}", prefix, result.isPresent());
-            return result;
-        } catch (HibernateException e) {
-            logger.error("Error finding widget builder definition with prefix: {}", prefix, e);
-            return Optional.empty();
+    @Override
+    public void validateDefinitionId(long definitionId) {
+        if (definitionId <= 0) {
+            throw new IllegalArgumentException("Definition ID must be positive, got: " + definitionId);
         }
+    }
+
+    /**
+     * Gets the entity manager for advanced operations.
+     *
+     * @return the entity manager, never null
+     */
+    protected EntityManager getEntityManager() {
+        return entityManager;
+    }
+
+    /**
+     * Gets the GUID manager for ID generation.
+     *
+     * @return the GUID manager, never null
+     */
+    protected IPSGuidManager getGuidManager() {
+        return guidManager;
     }
 }
